generated-tests/tests/snapshots/ts/typescript__test_generated_object.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
{ prop11: value16, prop2: value21 }

AST:
(program
  (expression_statement
    (object
      (pair
        (property_identifier)
        (identifier value16)
      )
      (pair
        (property_identifier)
        (identifier value21)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "prop11",
            kind: FieldExpression,
            scope: None,
            start_line: 1,
            start_column: 3,
            end_line: 1,
            end_column: 9,
        },
        SerializableUsage {
            name: "value16",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 11,
            end_line: 1,
            end_column: 18,
        },
        SerializableUsage {
            name: "prop2",
            kind: FieldExpression,
            scope: None,
            start_line: 1,
            start_column: 20,
            end_line: 1,
            end_column: 25,
        },
        SerializableUsage {
            name: "value21",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 27,
            end_line: 1,
            end_column: 34,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
