generated-tests/tests/snapshots/ts/typescript__test_generated_readonly_type.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const value23: readonly number[] = [1, 2, 3];

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier value23)
      (type_annotation
        (readonly_type
          (array_type
            (predefined_type)
          )
        )
      )
      (array
        (number)
        (number)
        (number)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value23",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
